Added Two More Project

--- a/index.html
+++ b/index.html
@@ -323,6 +323,29 @@
 
               <div
                 class="project-list__item"
+                data-img="./assets/images/ovaclone.webp"
+              >
+                <a
+                  href="https://mansurivilla.github.io/ovaclone/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">OVE CLONE</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry"
+                    >Startup Company (Clone)</span
+                  >
+                  <span class="project-list__year">2025</span>
+                  <img
+                    src="./assets/images/ovaclone.webp"
+                    alt="OVE CLONE Thumbnail"
+                    class="project-list__mobile-img"
+                  />
+                </a>
+              </div>
+
+              <div
+                class="project-list__item"
                 data-img="./assets/images/Frame_13.webp"
               >
                 <a
@@ -473,6 +496,28 @@
                   <img
                     src="./assets/images/Frame_14.webp"
                     alt="Interno Thumbnail"
+                    class="project-list__mobile-img"
+                  />
+                </a>
+              </div>
+              <div
+                class="project-list__item"
+                data-img="./assets/images/significoclone.webp"
+              >
+                <a
+                  href="https://mansurivilla.github.io/Significo-clone/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">Significo CLONE</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry"
+                    >Startup Company (Clone)</span
+                  >
+                  <span class="project-list__year">2023</span>
+                  <img
+                    src="./assets/images/significoclone.webp"
+                    alt="Significo CLONE Thumbnail"
                     class="project-list__mobile-img"
                   />
                 </a>
