Added Some SEO things

--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
     </title>
     <meta
       name="description"
-      content="Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer offering innovative solutions for web and design projects. Expert in creating responsive websites and user-centric designs."
+      content="Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer in Ahmedabad, India. Offering innovative solutions for web and design projects. Expert in creating responsive websites, user-centric designs, and SEO optimization."
     />
     <meta
       name="keywords"
-      content="Freelance Developer, Website Developer, UI/UX Designer, Graphic Designer, Web Design, User Experience, Creative Design, Responsive Design"
+      content="Adnan Mansuri, Freelance Developer, Website Developer, UI/UX Designer, Graphic Designer, Web Design, User Experience, Creative Design, Responsive Design, Front-end Developer, HTML5, CSS3, JavaScript, jQuery, GSAP, React, SEO Optimization, Web Performance, Portfolio, Gujarat, India, Ahmedabad, Freelancer in India"
     />
     <meta name="author" content="Adnan Mansuri" />
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="distribution" content="global" />
+    <meta name="rating" content="general" />
+    <meta name="geo.region" content="IN-GJ" />
+    <meta name="geo.placename" content="Ahmedabad" />
+    <meta name="geo.position" content="23.0225;72.5714" />
+    <meta name="ICBM" content="23.0225, 72.5714" />
 
     <meta property="og:url" content="https://adnanmansuri.pages.dev/" />
     <meta property="og:type" content="website" />
