--- a/index.html
+++ b/index.html
@@ -63,30 +63,29 @@
 
     <script type="application/ld+json">
       {
-          "@context": "https://schema.org",
-          "@type": "Person",
-          "name": "Adnan Mansuri",
-          "jobTitle": "Freelance Website Developer, UI/UX Designer, Graphic Designer",
-          "url": "https://www.adnanmansuri.pages.dev",
-          "sameAs": [
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Adnan Mansuri",
+        "jobTitle": "Freelance Website Developer, UI/UX Designer, Graphic Designer",
+        "url": "https://www.adnanmansuri.pages.dev",
+        "sameAs": [
           "https://www.linkedin.com/in/mansuri-adnan/",
-          "https://github.com/mansurivilla",
-          ],
-          "image": "https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103",
-          "description": "Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer specializing in creating responsive websites, user-centric designs, and striking graphics.",
-          "address": {
-              "@type": "PostalAddress",
-              "addressLocality": "Ahmedabad",
-              "addressRegion": "Gujarat",
-              "addressCountry": "India"
-          },
-          {
-              "@type": "ContactPoint",
-              "telephone": "+91 834 769 3235",
-              "areaServed": "Global",
-              "availableLanguage": ["English", "Hindi", "Gujarati"]
-          }
-
+          "https://github.com/mansurivilla"
+        ],
+        "image": "https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103",
+        "description": "Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer specializing in creating responsive websites, user-centric designs, and striking graphics.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Ahmedabad",
+          "addressRegion": "Gujarat",
+          "addressCountry": "India"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+91 834 769 3235",
+          "areaServed": "Global",
+          "availableLanguage": ["English", "Hindi", "Gujarati"]
+        }
       }
     </script>
     <script>
