--- a/index.html
+++ b/index.html
@@ -309,27 +309,6 @@
             <div class="project-list">
               <div
                 class="project-list__item"
-                data-img="./assets/images/tst-mockup.webp"
-              >
-                <a
-                  href="https://theshoetales.com/"
-                  target="_blank"
-                  class="project-list__link"
-                >
-                  <span class="project-list__name">THE SHOE TALES</span>
-                  <span class="project-list__type">Website</span>
-                  <span class="project-list__industry">Footwear Company</span>
-                  <span class="project-list__year">2025</span>
-                  <img
-                    src="./assets/images/tst-mockup.webp"
-                    alt="The Shoe Tales Thumbnail"
-                    class="project-list__mobile-img"
-                  />
-                </a>
-              </div>
-
-              <div
-                class="project-list__item"
                 data-img="./assets/images/ovaclone.webp"
               >
                 <a
@@ -347,6 +326,30 @@
                     src="./assets/images/ovaclone.webp"
                     alt="OVE CLONE Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
+                  />
+                </a>
+              </div>
+              <div
+                class="project-list__item"
+                data-img="./assets/images/codebidz.webp"
+              >
+                <a
+                  href="https://codebidz.pages.dev/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">CODEBIDZ</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry">IT, Company</span>
+                  <span class="project-list__year">2025</span>
+                  <img
+                    src="./assets/images/codebidz.webp"
+                    alt="CODEBIDZ Thumbnail"
+                    class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -370,6 +373,8 @@
                     src="./assets/images/Frame_13.webp"
                     alt="What A Fuel Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -393,6 +398,8 @@
                     src="./assets/images/Frame_15.webp"
                     alt="Brooklyn Travel Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -416,6 +423,8 @@
                     src="./assets/images/mockup-btg.webp"
                     alt="Blue Tees Golf Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -439,6 +448,8 @@
                     src="./assets/images/mockup-aditiya.webp"
                     alt="Aditiya Synthetic Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -460,6 +471,8 @@
                     src="./assets/images/mockup-cupor.webp"
                     alt="Cupreon Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -481,32 +494,12 @@
                     src="./assets/images/lamsa-info-mockup.webp"
                     alt="Lamsa Infosolutions Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
 
-              <div
-                class="project-list__item"
-                data-img="./assets/images/Frame_14.webp"
-              >
-                <a
-                  href="https://mansurivilla.github.io/Interno/"
-                  target="_blank"
-                  class="project-list__link"
-                >
-                  <span class="project-list__name">Interno</span>
-                  <span class="project-list__type">Website</span>
-                  <span class="project-list__industry"
-                    >Interior Designing Company</span
-                  >
-                  <span class="project-list__year">2023</span>
-                  <img
-                    src="./assets/images/Frame_14.webp"
-                    alt="Interno Thumbnail"
-                    class="project-list__mobile-img"
-                  />
-                </a>
-              </div>
               <div
                 class="project-list__item"
                 data-img="./assets/images/significoclone.webp"
@@ -526,6 +519,8 @@
                     src="./assets/images/significoclone.webp"
                     alt="Significo CLONE Thumbnail"
                     class="project-list__mobile-img"
+                    decoding="async"
+                    loading="lazy"
                   />
                 </a>
               </div>
@@ -552,6 +547,8 @@
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/html.webp"
               alt="Skill Icon Html"
             />
@@ -560,6 +557,8 @@
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/css.webp"
               alt="Skill Icon Css"
             />
@@ -568,6 +567,8 @@
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/js.webp"
               alt="Skill Icon Javascript"
             />
@@ -576,23 +577,19 @@
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/jquery.webp"
               alt="Skill Icon Jquery"
             />
-            <span class="skills__Label" style="color: #000"> jQuery </span>
+            <span class="skills__Label"> jQuery </span>
           </div>
 
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assets/images/gsap.webp"
-              alt="Skill Icon Greensock Animation Pltaform"
-            />
-            <span class="skills__Label"> GSAP </span>
-          </div>
-          <div class="skills_icon">
-            <img
-              class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/bootstrap.webp"
               alt="Skill Icon Bootstrap"
             />
@@ -601,6 +598,78 @@
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/react.png"
+              alt="Skill Icon React"
+            />
+            <span class="skills__Label"> React </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/nextjs.png"
+              alt="Skill Icon Nextjs"
+            />
+            <span class="skills__Label"> Nextjs </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/github.svg"
+              alt="Skill Icon Github"
+            />
+            <span class="skills__Label"> Github </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/gsap.webp"
+              alt="Skill Icon Greensock Animation Pltaform"
+            />
+            <span class="skills__Label"> GSAP </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/lenis.png"
+              alt="Skill Icon Lenis"
+            />
+            <span class="skills__Label"> Lenis </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/locomotive-js.png"
+              alt="Skill Icon Locomotive Scroll"
+            />
+            <span class="skills__Label"> Locomotive Scroll </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/shopify.png"
+              alt="Skill Icon Shopify"
+            />
+            <span class="skills__Label"> Shopify </span>
+          </div>
+          <div class="skills_icon">
+            <img
+              class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/wp.webp"
               alt="Skill Icon Wordpress"
             />
@@ -609,17 +678,8 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assets/images/shopify.png"
-              alt="Skill Icon Shopify"
-              width="50"
-              height="50"
+              decoding="async"
               loading="lazy"
-            />
-            <span class="skills__Label"> Shopify </span>
-          </div>
-          <div class="skills_icon">
-            <img
-              class="skill"
               src="./assets/images/vscode.webp"
               alt="Skill Icon Visual Studio Code"
             />
@@ -628,6 +688,8 @@
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/sublime_text.webp"
               alt="Skill Icon Submile Text"
             />
@@ -636,14 +698,18 @@
           <div class="skills_icon">
             <img
               class="skill"
-              src="./assets/images/ai.webp"
-              alt="Skill Icon Adobe Illustrator"
+              decoding="async"
+              loading="lazy"
+              src="./assets/images/anitgravity.png"
+              alt="Skill Icon Anitgravity"
             />
-            <span class="skills__Label"> Adobe Illustrator </span>
+            <span class="skills__Label"> Anitgravity </span>
           </div>
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/ps.webp"
               alt="Skill Icon Adobe Photoshop"
             />
@@ -652,6 +718,8 @@
           <div class="skills_icon">
             <img
               class="skill"
+              decoding="async"
+              loading="lazy"
               src="./assets/images/figma.webp"
               alt="Skill Icon Figma"
             />
