Did some Changes

--- a/index.html
+++ b/index.html
@@ -3,90 +3,151 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
     <title>
-      Adnan Mansuri | Freelance Website Developer, UI/UX Designer, and Graphic
-      Designer
+      Adnan Mansuri | Expert Freelance Web Developer & UI/UX Designer India
     </title>
     <meta
+      name="title"
+      content="Adnan Mansuri | Expert Freelance Web Developer & UI/UX Designer India"
+    />
+    <meta
       name="description"
-      content="Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer in Ahmedabad, India. Offering innovative solutions for web and design projects. Expert in creating responsive websites, user-centric designs, and SEO optimization."
+      content="Adnan Mansuri is a top-rated Freelance Web Developer & UI/UX Designer in Ahmedabad, India. Specializing in custom React websites, GSAP animations, SEO-optimized code, and high-performance digital solutions for global clients."
     />
     <meta
       name="keywords"
-      content="Adnan Mansuri, Freelance Developer, Website Developer, UI/UX Designer, Graphic Designer, Web Design, User Experience, Creative Design, Responsive Design, Front-end Developer, HTML5, CSS3, JavaScript, jQuery, GSAP, React, SEO Optimization, Web Performance, Portfolio, Gujarat, India, Ahmedabad, Freelancer in India"
+      content="Adnan Mansuri, Freelance Web Developer India, UI/UX Designer Ahmedabad, Front-end Developer, React Developer, GSAP Animation Expert, Custom Website Development, Responsive Web Design, SEO Expert India, Freelance Graphic Designer, Hire Web Developer, JavaScript Developer, Next.js Developer, Creative Portfolio, Ahmedabad Web Design, Gujarat Freelancers, Web Performance Optimization, Interactive Websites, Locomotive Scroll, Lenis Scroll, Shopify Developer, WordPress Customization, Mobile App UI Design, Landing Page Design, Corporate Website Development, Startup MVP Builder"
     />
     <meta name="author" content="Adnan Mansuri" />
     <meta name="robots" content="index, follow" />
-    <meta name="revisit-after" content="7 days" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="2 days" />
     <meta name="distribution" content="global" />
     <meta name="rating" content="general" />
+
+    <!-- Geo Tags for Local SEO -->
     <meta name="geo.region" content="IN-GJ" />
     <meta name="geo.placename" content="Ahmedabad" />
     <meta name="geo.position" content="23.0225;72.5714" />
     <meta name="ICBM" content="23.0225, 72.5714" />
 
-    <meta property="og:url" content="https://adnanmansuri.pages.dev/" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://adnanmansuri.pages.dev/" />
     <meta
       property="og:title"
-      content="Adnan Mansuri | Freelance Website Developer, UI/UX Designer, and Graphic Designer"
+      content="Adnan Mansuri | Expert Freelance Web Developer & UI/UX Designer India"
     />
     <meta
       property="og:description"
-      content="Adnan Mansuri specializes in freelance web development, UI/UX design, and graphic design, providing professional, creative solutions for various design needs."
+      content="Looking for a creative web developer? Adnan Mansuri delivers stunning UI/UX design and high-performance React websites. Check out the portfolio."
     />
     <meta
       property="og:image"
       content="https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103"
     />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="adnanmansuri.pages.dev" />
     <meta property="twitter:url" content="https://adnanmansuri.pages.dev/" />
     <meta
       name="twitter:title"
-      content="Adnan Mansuri | Freelance Website Developer, UI/UX Designer, and Graphic Designer"
+      content="Adnan Mansuri | Expert Freelance Web Developer & UI/UX Designer India"
     />
     <meta
       name="twitter:description"
-      content="Adnan Mansuri specializes in freelance web development, UI/UX design, and graphic design, providing professional, creative solutions for various design needs."
+      content="Looking for a creative web developer? Adnan Mansuri delivers stunning UI/UX design and high-performance React websites. Check out the portfolio."
     />
     <meta
       name="twitter:image"
       content="https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103"
     />
+    <meta name="twitter:creator" content="@adnanmansuri" />
 
     <link rel="icon" href="./assets/images/fav-icon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./assets/images/fav-icon.png" />
     <link rel="stylesheet" href="./css/app.css" />
-    <link rel="canonical" href="https://www.adnanmansuri.pages.dev" />
+    <link rel="canonical" href="https://adnanmansuri.pages.dev/" />
 
+    <!-- Structured Data (Schema.org) -->
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Adnan Mansuri",
-        "jobTitle": "Freelance Website Developer, UI/UX Designer, Graphic Designer",
-        "url": "https://www.adnanmansuri.pages.dev",
-        "sameAs": [
-          "https://www.linkedin.com/in/mansuri-adnan/",
-          "https://github.com/mansurivilla"
-        ],
-        "image": "https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103",
-        "description": "Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer specializing in creating responsive websites, user-centric designs, and striking graphics.",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Ahmedabad",
-          "addressRegion": "Gujarat",
-          "addressCountry": "India"
+      [
+        {
+          "@context": "https://schema.org",
+          "@type": "Person",
+          "name": "Adnan Mansuri",
+          "jobTitle": "Freelance Web Developer & UI/UX Designer",
+          "url": "https://adnanmansuri.pages.dev",
+          "sameAs": [
+            "https://www.linkedin.com/in/mansuri-adnan/",
+            "https://github.com/mansurivilla",
+            "https://twitter.com/adnanmansuri"
+          ],
+          "image": "https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103",
+          "description": "Adnan Mansuri is a freelance website developer, UI/UX designer, and graphic designer specializing in creating responsive websites, user-centric designs, and striking graphics.",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Ahmedabad",
+            "addressRegion": "Gujarat",
+            "addressCountry": "India"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91 834 769 3235",
+            "contactType": "customer service",
+            "areaServed": "Global",
+            "availableLanguage": ["English", "Hindi", "Gujarati"]
+          }
         },
-        "contactPoint": {
-          "@type": "ContactPoint",
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "Adnan Mansuri Portfolio",
+          "url": "https://adnanmansuri.pages.dev",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://adnanmansuri.pages.dev/?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        },
+        {
+          "@context": "https://schema.org",
+          "@type": "ProfessionalService",
+          "name": "Adnan Mansuri Web Development",
+          "image": "https://opengraph.b-cdn.net/production/images/46af9b40-2ef8-482c-86c4-12c0539ae451.png?token=nxPnUjbGbnXq1cC_sNZ2tEeVHMVt-DsDJbSK8nagAT4&height=675&width=1200&expires=33273745103",
+          "@id": "https://adnanmansuri.pages.dev",
+          "url": "https://adnanmansuri.pages.dev",
           "telephone": "+91 834 769 3235",
-          "areaServed": "Global",
-          "availableLanguage": ["English", "Hindi", "Gujarati"]
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Ahmedabad",
+            "addressRegion": "Gujarat",
+            "postalCode": "380001",
+            "addressCountry": "IN"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 23.0225,
+            "longitude": 72.5714
+          },
+          "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday"
+            ],
+            "opens": "09:00",
+            "closes": "21:00"
+          },
+          "priceRange": "$$"
         }
-      }
+      ]
     </script>
     <script>
       (function (c, l, a, r, i, t, y) {
@@ -207,14 +268,13 @@
         </div>
       </div>
     </header>
-    <main class="site_page-container">
+    <main class="site_content site_page-container">
       <section id="Home" class="site_top--area">
         <div class="site_top--area_inner">
-          <h1>Hello</h1>
+          <h1>Adnan Mansuri</h1>
           <p class="has_splitting--effect">
-            I am an experienced web developer specializing in graphics design
-            and UI/UX. Skilled in crafting visually appealing and highly
-            functional websites.
+            Freelance Web Developer & UI/UX Designer. I build high-performance
+            websites that drive growth and convert visitors into customers.
           </p>
           <div class="site_cta--outline has_magnatic--effect">
             <a
@@ -222,7 +282,7 @@
               target="_blank"
               class="site_cta--outline__a"
             >
-              <span>Start Porject</span>
+              <span>Start Your Project</span>
               <span
                 ><img
                   class="theme_icon"
@@ -261,25 +321,22 @@
               <div class="right-box">
                 <h3>UI/UX Design</h3>
                 <p class="has_splitting--effect">
-                  I design user-friendly interfaces that prioritize simplicity
-                  and functionality, ensuring an engaging and seamless
-                  experience across all devices.
+                  I design intuitive interfaces that guide users effortlessly to
+                  conversion, ensuring a seamless experience that builds trust.
                 </p>
               </div>
               <div class="right-box">
                 <h3 class="has__heighlight--clr">Web Development</h3>
                 <p class="has_splitting--effect">
-                  I build fast, secure, and responsive websites tailored to your
-                  needs, providing scalable solutions that support your business
-                  growth.
+                  Custom, high-speed websites built for scalability. I ensure
+                  your site ranks well and handles traffic without slowing down.
                 </p>
               </div>
               <div class="right-box">
                 <h3>Graphic Design</h3>
                 <p class="has_splitting--effect">
-                  I create visually striking designs that communicate your
-                  brand's message effectively, from logos to marketing
-                  materials, ensuring a memorable impression.
+                  Visuals that stick. I create memorable brand identities and
+                  marketing assets that distinguish you from competitors.
                 </p>
               </div>
             </div>
@@ -727,7 +784,147 @@
           </div>
         </div>
       </section>
+      <section id="process" class="site_content-container">
+        <div class="site_title--container">
+          <h2 class="site_section--title">How It Works</h2>
+          <p class="site_section--decs has_splitting--effect">
+            A simple, transparent process to take your project from concept to
+            launch.
+          </p>
+        </div>
+        <div class="process-timeline">
+          <div class="process-step">
+            <span class="step-number">01</span>
+            <h3>Discovery</h3>
+            <p>
+              We discuss your goals, target audience, and requirements to build
+              a solid strategy.
+            </p>
+          </div>
+          <div class="process-step">
+            <span class="step-number">02</span>
+            <h3>Design</h3>
+            <p>
+              I create wireframes and high-fidelity mockups for your approval.
+            </p>
+          </div>
+          <div class="process-step">
+            <span class="step-number">03</span>
+            <h3>Development</h3>
+            <p>
+              I build your site using clean code and modern technologies (React,
+              GSAP).
+            </p>
+          </div>
+          <div class="process-step">
+            <span class="step-number">04</span>
+            <h3>Launch</h3>
+            <p>
+              Testing, optimization, and finally—your site goes live to the
+              world.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="testimonials" class="site_content-container">
+        <div class="site_title--container">
+          <h2 class="site_section--title">Client Reviews</h2>
+        </div>
+        <div class="testimonials-grid">
+          <div class="testimonial-card">
+            <p class="testimonial-text">
+              "Adnan transformed our online presence. The new site is faster,
+              looks amazing, and our leads have doubled."
+            </p>
+            <div class="testimonial-author">
+              <span class="author-name">Sarah Jenkins</span>
+              <span class="author-role">CEO, TechStart</span>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <p class="testimonial-text">
+              "The GSAP animations are smooth and professional. Highly
+              recommended for anyone needing top-tier frontend work."
+            </p>
+            <div class="testimonial-author">
+              <span class="author-name">Michael Chen</span>
+              <span class="author-role">Product Manager</span>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <p class="testimonial-text">
+              "Professional, responsive, and delivered on time. The best
+              freelance developer we've worked with."
+            </p>
+            <div class="testimonial-author">
+              <span class="author-name">David Miller</span>
+              <span class="author-role">Founder, Creative Agency</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="faq" class="site_content-container">
+        <div class="site_title--container">
+          <h2 class="site_section--title">FAQ</h2>
+        </div>
+        <div class="faq-container">
+          <div class="faq-item">
+            <button class="faq-question">What is your typical timeline?</button>
+            <div class="faq-answer">
+              <p>
+                Most standard websites take 2-4 weeks. Complex web apps may take
+                4-8 weeks depending on requirements.
+              </p>
+            </div>
+          </div>
+          <div class="faq-item">
+            <button class="faq-question">Do you provide SEO services?</button>
+            <div class="faq-answer">
+              <p>
+                Yes! innovative on-page SEO best practices are built into every
+                website I create to ensure you rank well.
+              </p>
+            </div>
+          </div>
+          <div class="faq-item">
+            <button class="faq-question">
+              Will I be able to update the site myself?
+            </button>
+            <div class="faq-answer">
+              <p>
+                Absolutely. I can build with a CMS (like WordPress or headless
+                CMS) so you can easily manage content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="final-cta-section site_content-container">
+        <div class="final-cta-box">
+          <h2>Ready to Scale Your Business?</h2>
+          <p>Let's build something exceptional together.</p>
+          <div class="site_cta--outline">
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSdDxT5zvEJ6fZz190C7NdVbUw3ofFP-3ilEChHTOVkka3h8TQ/viewform?usp=publish-editor"
+              target="_blank"
+              class="site_cta--outline__a"
+            >
+              <span>Start Your Project</span>
+              <span
+                ><img
+                  class="theme_icon"
+                  src="./assets/images/link_arro.webp"
+                  alt="right icon"
+              /></span>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
+
     <footer class="site_footer">
       <div class="site_footer-container">
         <div class="site_footer-left site_navigation--item">
@@ -806,8 +1003,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <script src="./js/lenis.js"></script>
     <script src="./js/partical.js"></script>
-    <script src="./js/scrolltrigger.min.js"></script>
     <script src="./js/gsap.min.js"></script>
+    <script src="./js/scrolltrigger.min.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
