--- a/pages/startproject.html
+++ b/pages/startproject.html
@@ -48,7 +48,7 @@
     <link rel="icon" href="../assets/images/fav-icon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../assets/images/fav-icon.png" />
     <link rel="stylesheet" href="../css/app.css" />
-    <link rel="canonical" href="https://www.adnanmansuri.pages.dev" />
+    <link rel="canonical" href="https://adnanmansuri.pages.dev" />
 
     <script type="application/ld+json">
       {
@@ -56,7 +56,7 @@
           "@type": "Person",
           "name": "Adnan Mansuri",
           "jobTitle": "Freelance Website Developer, UI/UX Designer, Graphic Designer",
-          "url": "https://www.adnanmansuri.pages.dev",
+          "url": "https://adnanmansuri.pages.dev",
           "sameAs": [
           "https://www.linkedin.com/in/mansuri-adnan/",
           "https://github.com/mansurivilla",
